--- a/seller-info-service.yaml
+++ b/seller-info-service.yaml
@@ -5,20 +5,20 @@ spring:
   application:
     name: seller-info-service
     url: /public/api/v1/sellers
-  flyway:
-    enabled: false
 
   datasource:
     url: jdbc:postgresql://158.160.27.104:5432/seller_db
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: true
 
   jpa:
     database: POSTGRESQL
     show-sql: true
     hibernate:
-      ddl-auto: update # далее validate
+      ddl-auto: validate # далее validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
