--- a/upload-service.yaml
+++ b/upload-service.yaml
@@ -92,13 +92,13 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
-#   server:
-#     port: 8021
-#     ssl:
-#       enabled: false
-#   zipkin:
-#     tracing:
-#       endpoint: http://158.160.27.104:9411/api/v2/spans
+   server:
+     port: 8021
+     ssl:
+       enabled: false
+   zipkin:
+     tracing:
+       endpoint: http://158.160.27.104:9411/api/v2/spans
 
 logging:
   level:
