--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -33,10 +33,10 @@ spring:
             - Path=/*/*/*/files
       default-filters:
          - name: AuthFilter
-         - name: CircuitBreaker
-           args:
-             name: DefaultCircuitBreaker
-             fallbackUri: forward:/fallback
+#         - name: CircuitBreaker
+#          args:
+#             name: DefaultCircuitBreaker
+#             fallbackUri: forward:/fallback
 
   security:
     oauth2:
@@ -60,7 +60,7 @@ spring:
 
 management:
   tracing:
-    enabled: true
+    enabled: false
     sampling:
       probability: 1
   metrics:
