--- a/upload-service.yaml
+++ b/upload-service.yaml
@@ -3,7 +3,7 @@ server:
 
 application:
   validation:
-    extensions:
+  extensions:
       jpg:
         max_file_size_in_bytes: 10_485_760 #10 mb
         file_types:
@@ -54,14 +54,15 @@ application:
   object-storage:
     host: storage.yandexcloud.net
     region: ru-central1
-    bucket_name: marketplace-object-storage
+    bucket-name: marketplace-object-storage
     credentials:
-      secret_key: ${SECRET_KEY}
-      access_key: ${ACCESS_KEY}
-
+      secret-key: ${SECRET_KEY}
+      access-key: ${ACCESS_KEY}
 
 spring:
-
+  application:
+    name: upload-service
+    
   security:
     oauth2:
       resourceserver:
@@ -73,12 +74,11 @@ spring:
       enabled: true
       max-file-size: 200MB
       max-request-size: 2000MB #2 GB
-  application:
-    name: upload-service
+      
   data:
     mongodb:
       uri: mongodb://158.160.27.104:27017/upload-service
-      database: upload_service
+      database: upload-service
 
 management:
   tracing:
@@ -88,10 +88,17 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus,health
+        include: prometheus, health
   metrics:
     tags:
       application: ${spring.application.name}
+   server:
+     port: 8021
+     ssl:
+       enabled: false
+   zipkin:
+     tracing:
+       endpoint: http://158.160.27.104:9411/api/v2/spans
 
 logging:
   level:
