--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -18,7 +18,7 @@ spring:
         - id: seller-service-route
           uri: http://172.17.0.1:8085
           predicates:
-            - Path=/*/*/*/sellers, /*/*/*/sellers/{sellerId}
+            - Path=/*/*/*/sellers, /*/*/*/sellers/{sellerId}, /*/*/*/sellers/string
         - id: product-service-route
           uri: http://51.250.102.12:9090
           predicates:
@@ -86,6 +86,8 @@ application:
       # seller-api  
       - url: /*/*/*/sellers
         methods: POST
+      - url: /*/*/*/sellers/string
+        methods: GET
       # products-api
       - url: /*/*/*/types
         methods: GET
